--- a/cmel/ecommsvcs_sdk/src/main/resources/ecommsvcs_sdk.properties
+++ b/cmel/ecommsvcs_sdk/src/main/resources/ecommsvcs_sdk.properties
@@ -1,4 +1,4 @@
-app.ecommsvcs.sdk.com.qre.cmel.otp.sdk.service=email
+app.ecommsvcs.sdk.service=email
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
