Added changes for prod-application.properties

--- a/tg/tg_query_api/src/main/resources/application.properties
+++ b/tg/tg_query_api/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 #configuring application name
 spring.application.name = tg_query_api
 ## if no active profile, default is 'default'
-#spring.profiles.active=dev
-server.port=5000
+spring.profiles.active=prod
+server.port=5500
 server.servlet.context-path=/tg_query_api
 
 #database connection configuration
