--- a/tg/tg_query_api/src/main/resources/application-prod.properties
+++ b/tg/tg_query_api/src/main/resources/application-prod.properties
@@ -8,9 +8,21 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialec
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.globally_quoted_identifiers=true
-spring.datasource.url=jdbc:postgresql://localhost:5432/afcdb_tg
-spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.url=jdbc:postgresql://${RDS_HOSTNAME:localhost}:${RDS_PORT:5432}/${RDS_DB_NAME:afcdb_tg}
+spring.datasource.username=${RDS_USERNAME:postgres}
+spring.datasource.password=${RDS_PASSWORD:postgres}
+
+spring.jpa.properties.hibernate.generate_statistics=false
+spring.jpa.properties.hibernate.jdbc.batch_size=20
+spring.jpa.properties.hibernate.order_inserts=true
+spring.jpa.properties.hibernate.order_updates=true
+spring.jpa.properties.hibernate.batch_versioned_data=true
+
+spring.datasource.hikari.maximum-pool-size=20
+spring.datasource.hikari.minimum-idle=5
+spring.datasource.hikari.idle-timeout=60000
+spring.datasource.hikari.connection-timeout=30000
+spring.datasource.hikari.pool-name=sqrts-pool
 
 # /api-docs endpoint custom path
 springdoc.api-docs.path=/api-docs
@@ -24,7 +36,7 @@ app.log.archive.root.path=logs/apps/archive
 #load messages mean
 spring.messages.basename=messages
 
-app.email-subject=DMP OTP
+app.email-subject=SQRTS OTP
 app.email-message =Dear User, your OTP for registration is $. Use this code to validate your login
 app.private-key-path=rsa/private_key
 app.public-key-path=rsa/public_key
