--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,7 +40,7 @@ jobs:
         #Set artifact name
         name: artifact
         #From this path
-        path: target/tg/tg_query_api/tg_query_api-1.0-SNAPSHOT.jar
+        path: target/tg_query_api-1.0-SNAPSHOT.jar
       
   sonar:
     needs: build
@@ -69,7 +69,7 @@ jobs:
       env:
         GIT_HUB_TOKEN: ${{ secrets.GIT_HUB_TOKEN }} # Needed to get PR information, if any
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-      run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=e1327906_cicd
+      run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=e1327906_sqrts
   snyk:
     needs: build
     runs-on: ubuntu-latest
