--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,8 @@
     <version>1.0-SNAPSHOT</version>
     <properties>
         <java.version>17</java.version>
+        <sonar.organization>e1327906</sonar.organization>
+        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
     </properties>
 
     <modules>
