--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,6 @@ on:
   pull_request:
     branches: [ "master" ]
     types: [opened, synchronize, reopened]
-
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -34,7 +33,8 @@ jobs:
 
       #Build the application using Maven
       - name: Upload JAR
-        #This uploads artifacts from your workflow allowing you to share data between jobs and store data once a workflow is complete.
+        #This uploads artifacts from your workflow allowing you to share
+        #data between jobs and store data once a workflow is complete.
         uses: actions/upload-artifact@v2
         with:
           #Set artifact name
